--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
     "css-loader": "^5.2.6",
+    "jest-css-modules": "^2.1.0",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "path": "^0.12.7",
+    "stream": "^0.0.2"
   }
 }
